packages/breadcrumb/src/scss/_component.scss
@use '@uqds/core/src/scss/global' as core;
@import 'global';

// Breadcrumb
.uq-breadcrumb {
  box-sizing: border-box;
  font-family: core.$font-body;
  font-size: core.$font-size-m;
  font-weight: core.$font-weight-normal; // will set font-weight to 400 like the FS version Is currently
  line-height: core.$line-height;
  color: $breadcrumb-link;
  list-style: none;
  margin: core.$space-none;
  padding: core.$space-none;

  *, *:before, *:after {
    box-sizing: border-box;
  }
  
  // Breadcrumb item
  &__item {
    display: inline;

    &:before {
      content: '';
      padding: core.$space-none 0.6rem;
      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-5 0 24 24' width='16' height='16' %3E%3Cpath d='M5.145 14.285l6.167-6a.41.41 0 000-.598L5.145 1.715' fill='none' stroke='%23565452' stroke-width='.75' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
      background-repeat: no-repeat;
    }

    &:first-child {
      &:before {
        content: '';
        display: none;
      }
    }
  }

  // Breadcrumb link
  &__link {
    display: inline-block;
    color: $breadcrumb-link;
    text-decoration: none;
    max-width: 260px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;

    &:hover {
      color: $breadcrumb-link;
      text-decoration: underline;
    }
  }
}

